# Automotive_SW_Programming

./: README.md  current_config.yaml
src/custom_msg_pkg/: CMakeLists.txt  package.xml
src/custom_msg_pkg/msg/: RobotStatus.msg  SensorReading.msg
src/custom_node_pkg/: package.xml  setup.cfg  setup.py
src/custom_node_pkg/custom_node_pkg/: RobotStatusPublisher.py  RobotStatusSubscriber.py  SensorPublisher.py  SensorSubscriber.py
src/my_action_package/: package.xml  setup.cfg  setup.py
src/my_action_package/my_action_package/: fibonacci_action_client.py  fibonacci_action_server.py
src/my_first_package/: package.xml  setup.py
src/my_first_package/my_first_package/: simple_publisher.py
src/my_launch_tutorial/: package.xml  setup.cfg  setup.py
src/my_launch_tutorial/config/: node_config.yaml
src/my_launch_tutorial/launch/: basic_launch.launch.py  control_module.launch.py  main_system.launch.py  param_launch.launch.py  sensor_module.launch.py  yaml_param_launch.launch.py
src/my_launch_tutorial/my_launch_tutorial/: main_system.launch.py  param_publisher.py  simple_publisher.py  simple_subscriber.py  yaml_param_launch.launch.py
src/my_service_package/: package.xml  setup.py
src/my_service_package/my_service_package/: AddTwoIntsClient.py  AddTwoIntsServer.py  AsyncAddTwoIntsClient.py
src/parameter_practice/: package.xml  setup.cfg  setup.py
src/parameter_practice/config/: parameter_config.yaml
src/parameter_practice/parameter_practice/: ParameterPublisher.py
src/rviz_tutorial/: package.xml  setup.py
src/rviz_tutorial/launch/: visualization.launch.py
src/rviz_tutorial/rviz_tutorial/: marker_publisher.py  pointcloud_publisher.py  tf_publisher.py
turtle_bag/: metadata.yaml  turtle_bag_0.db3
